/* Weireldkampioenn elite mann van de voorbye joarn */

--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -15,7 +15,7 @@ In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30
 * Wegrit vrouwn: [[Marta Bastianelli]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 * Wegrit elite: [[Paolo Bettini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 
-==Weireldkampioenn elite mann van de voorbye joarn==
+==Weireldkampioenn elite vintn van de voorbye joarn==
 *[[2006]] in Salzburg: [[Paolo Bettini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
 *[[2005]] in Madrid: [[Tom Boonen]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
 *[[2004]] in [[Verona]]: [[Oscar Freire]]  ([[Ofbeeldienge:Flag of Spain.svg|20px]])
