veranderienge 91850 van [[Special:Contributions/81.83.0.145|81.83.0.145]] were weggedoan

--- a/Johny_Turbo.mw
+++ b/Johny_Turbo.mw
@@ -5,7 +5,17 @@ Johny Turbo es vôorol gekend van een aantal singletjes, en trad ôofdzoakelik i
 Johny Turbo drounk en smoordige redelik vele en es overleedn na een lange aanslepende ziekte (dat ie lange verborgen eit kunn oudn), slechts ênigte doagn na zyn latste iptreedn (en da wos met de [[Gullegem]]se jeugdharmonie [[Burleske]]).
 
 ==Bekendste nummers==
-* [[Slekke (Johny Turbo)|Slekke]]]]
+* [[Slekke (Johny Turbo)|Slekke]]
+* [[Wie? 't Is Sinterklaas!]]
+* [[Vis in de Leie]]
+* [[Ik ben Johny]] (J.O.H.N.Y.)
+* [['k et gezien]]
+* [[Annemietje]]
+* [[Bangkok (Johny Turbo)|Bangkok]]
+* [[Beroepsslaapkamerdeure]]
+* Ik ben zo eenzaam (gebaseerd ip 't origineel van [[Will Tura]])
+* [[Maandag, dinsdag]]
+* [[Margrietje]]
 * [[Oede Zak]]
 * [[Kompel Verrompel]]
 * [[S ak ze zie]]
