*Empty MediaWiki Message*

--- a/Óscar_Freire.mw
+++ b/Óscar_Freire.mw
@@ -1,6 +1,6 @@
 [[Image:Freire_Hincapie_RVV2008.JPG|thumb|200px|Oscar Freire up 'n Kwoaremong in de Rounde van Vloandern van 2008]]
 
-'''Oscar Freire''' (Torrelavega, [[15 februoari]] [[1976]]) is e [[Spanje|Spaanschn]] coureur die surtout ekend is omdat 'n ol 3 keirs weireldkampioen up de weug ewist is.
+'''Oscar Freire''' (Torrelavega, [[15 februoari]] [[1976]]) is e [[Spanje|Spaanschn]] coureur die surtout ekend is omdat 'n ol 3 keirs [[Weireldkampioenschappn velokoerse|weireldkampioen up de weug]] ewist is.
 
 Oloewel da Freire e stievn goein sprinter is, zoudt nie êerlik zyn van nem simpelweg sprinter te noemn. E moe nie vele enterneern voun in forme te groakn en met oundermêer de Broabantschn Pyl, 'n eindstand in 'n Tirreno en ze weireltitels up moelikke parcours, et 'n beweezn dat 'n oek goed omoge ku ryen.
 
