--- a/Verona.mw
+++ b/Verona.mw
@@ -6,13 +6,13 @@ De êeste inweuners van Veronia woarn de Euganei in 550 vôo [[Jezus van Nazaret
 ==Bezienswoardigheedn==
 [[Ofbeeldienge:Verona.jpg|thumb|right|300px|De romeinse arena]]
 
-Deur de ryke geschiedenisse van Verona zyn der veel bezienswoardigheedn in Verona. Tès gekoozn tot een [[UNESCO]] weirelderfgoedplekke. Het belangrykste monument es et Romeinse amphitheatre, de Arena, die gebouwd es round 30 achter Christus. Tot ip vandoage speeln ze der tonêelstikkn in de zomer. Andere monumentn uut de Rominse tyd zyn het theoater, de Arco dei Gavi, de Porta dei Borsari en de Porta dei Leoni.
+Deur de ryke geschiedenisse van Verona zyn der veel bezienswoardigeedn in Verona. 't Es gekoozn tot een [[UNESCO]] weirelderfgoedplekke. Het belangrykste monument es et Romeinse amphitheatre, de Arena, die gebouwd es round 30 achter Christus. Tot ip vandoage speeln ze der tonêelstikkn in de zomer. Andere monumentn uut de Rominse tyd zyn 't theoater, de Arco dei Gavi, de Porta dei Borsari en de Porta dei Leoni.
 
-Uut de middeljeeuwn en loater zyn vôorol de basiliekn en keirkn overgebleevn: de grôte Romoanse Basilica of San Zeno Maggiore, de Basilica de San Lorenzo, de St. Maria Antica en de St Anastasia zyn de belangrykste.
+Uut de middelêeuwn en loater zyn vôorol de basiliekn en keirkn overgebleevn: de grôte Romoanse Basilica of San Zeno Maggiore, de Basilica de San Lorenzo, de St. Maria Antica en de St Anastasia zyn de belangrykste.
 
-Verona es ôok nog gekend voo een onôoglik balkonske: het balkonske woarda Romeo Juliet zoe anbeden ein (in het verhoal van [[Shakespeare]]. 
+Verona es ôok nog gekend voo een onôoglik balkonske: het balkonske woarda Romeo Juliet zoe anbeedn ein (in het verhoal van [[Shakespeare]]). 
 
-In 2004 es in Verona ôok het [[Weireldkampioenschap Koerse ip de boane]] deuregegoan (gewonn deur [[Oscar Freire]].
+In 2004 es in Verona ôok het [[Weireldkampioenschappn velokoerse|Weireldkampioenschap Koerse ip de boane]] deuregegoan (gewonn deur [[Oscar Freire]]).
 
 ==Externe koppelienge==
 *[http://www.verona.com/ De officieeln website van Verona]
