--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -17,7 +17,7 @@ In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30
 
 ==Weireldkampioenn elite vintn van de voorbye joarn==
 *[[2006]] in Salzburg: [[Paolo Bettini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-*[[2005]] in Madrid: [[Tom Boonen]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
+*[[Weireldkampioenschappn Velokoerse (2005)|2005]] in Madrid: [[Tom Boonen]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
 *[[2004]] in [[Verona]]: [[Oscar Freire]]  ([[Ofbeeldienge:Flag of Spain.svg|20px]])
 *[[2003]] in Hamilton: [[Igor Astarloa]] ([[Ofbeeldienge:Flag of Spain.svg|20px]])
 *[[2002]] in [[Zolder]]: [[Mario Cipollini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
