--- a/Verona.mw
+++ b/Verona.mw
@@ -4,7 +4,7 @@
 De êeste inweuners van Veronia woarn de Euganei in 550 vôo [[Jezus van Nazareth|Christus]]. In 300 vôo Christus es Verona een [[Romeinn|Romeinse]] kolonie gekoomn.
 
 ==Bezienswoardigheedn==
-[[Ofbeeldienge:Verona.jpg|thumb|right|300px|De romeinse arena]]
+[[Ofbeeldienge:Verona.jpg|thumb|right|300px|De Romeinsn arena]]
 
 Deur de ryke geschiedenisse van Verona zyn der veel bezienswoardigeedn in Verona. 't Es gekoozn tot een [[UNESCO]] weirelderfgoedplekke. Het belangrykste monument es et Romeinse amphitheatre, de Arena, die gebouwd es round 30 achter Christus. Tot ip vandoage speeln ze der tonêelstikkn in de zomer. Andere monumentn uut de Rominse tyd zyn 't theoater, de Arco dei Gavi, de Porta dei Borsari en de Porta dei Leoni.
 
@@ -12,7 +12,10 @@ Uut de middelêeuwn en loater zyn vôorol de basiliekn en keirkn overgebleevn: d
 
 Verona es ôok nog gekend voo een onôoglik balkonske: het balkonske woarda Romeo Juliet zoe anbeedn ein (in het verhoal van [[Shakespeare]]). 
 
-In 2004 es in Verona ôok het [[Weireldkampioenschappn velokoerse|Weireldkampioenschap Koerse ip de boane]] deuregegoan (gewonn deur [[Oscar Freire]]).
+==Sport==
+*[[Weireldkampioenschappn velokoerse|Weireldkampioenschap Koerse ip de boane]]: in 2004 deuregoan en ewonn deur [[Oscar Freire]].
+*Hellas Verona: [[voetbol|foetbolploeg]] die in 1985 'n scudetto ewonn et. I nunder stadion (Marcantonio Bentegodi) en de Rôo Duvels in 1990 nunder 'thuusmatchn'.
+*Chievo Verona: andern club die êentige joarn in de Serie A espeeld et.
 
 ==Externe koppelienge==
 *[http://www.verona.com/ De officieeln website van Verona]
