--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -17,6 +17,11 @@ Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’
 :2. Alejandro Valverde [[Ofbeeldienge:Flag of Spain.svg|20px]] z.t.
 :3. Anthony Geslin [[Ofbeeldienge:Flag of France.svg|20px]] z.t.
 :4. Marcus Ljungqvist [[Ofbeeldienge:Flag of Sweden.svg|20px]] z.t.
-:5. Murilo Fischer [[Ofbeeldienge:Flag of Brasil.svg|20px]] z.t.
+:5. Murilo Fischer [[Ofbeeldienge:Flag of Brazil.svg|20px]] z.t.
 
 [[Category:Weireldkampioenschap velokoerse]]
+
+
+[[da:VM i landevejscykling 2005]]
+[[de:Straßen-Radweltmeisterschaft 2005]]
+[[en:2005 UCI Road World Championships - Men's Road Race]]
