--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -13,11 +13,16 @@ Vinokourov, Bettini, Boogerd, Moerenhout, Serrano en Stangelj goungn de latste r
 Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’n inoald deur Tom Boonen.  
 
 == Uutslag (elite) ==
-:1. [[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 26' 10"
-:2. Alejandro Valverde [[Ofbeeldienge:Flag of Spain.svg|20px]] z.t.
-:3. Anthony Geslin [[Ofbeeldienge:Flag of France.svg|20px]] z.t.
+:1. [['''Tom Boonen''']] [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 26' 10"
+:2. '''Alejandro Valverde''' [[Ofbeeldienge:Flag of Spain.svg|20px]] z.t.
+:3. '''Anthony Geslin''' [[Ofbeeldienge:Flag of France.svg|20px]] z.t.
 :4. Marcus Ljungqvist [[Ofbeeldienge:Flag of Sweden.svg|20px]] z.t.
 :5. Murilo Fischer [[Ofbeeldienge:Flag of Brazil.svg|20px]] z.t.
+:6. Jakob Piil [[Ofbeeldienge:Flag of Denmark.svg|20px]] z.t.
+:7. Alexandre Kolobnev [[Ofbeeldienge:Flag of Russia.svg|20px]] z.t.
+:8. Andreas Klier [[Ofbeeldienge:Flag of Germany.svg|20px]] z.t.
+:9. Julian Dean [[Ofbeeldienge:Flag of New-Zealand.svg|20px]] z.t.
+:10. Martin Elmiger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
 
 [[Category:Weireldkampioenschap velokoerse]]
 
