--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -13,7 +13,7 @@ Vinokourov, Bettini, Boogerd, Moerenhout, Serrano en Stangelj goungn de latste r
 Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’n inoald deur Tom Boonen.  
 
 == Uutslag (elite) ==
-:1. [['''Tom Boonen''']] [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 26' 10"
+:1. '''Tom Boonen''' [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 26' 10"
 :2. '''Alejandro Valverde''' [[Ofbeeldienge:Flag of Spain.svg|20px]] z.t.
 :3. '''Anthony Geslin''' [[Ofbeeldienge:Flag of France.svg|20px]] z.t.
 :4. Marcus Ljungqvist [[Ofbeeldienge:Flag of Sweden.svg|20px]] z.t.
