--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -1,9 +1,9 @@
-'t '''Weireldkampioenschap koers 2005''' wos organiseerd in [[Madrid]] ([[Spanje]]). De koers vo de elite by de mann wos 273 km lank. Winnoare was [[Tom Boonen]].  
+'t '''Weireldkampioenschap koers 2005''' wos organiseerd in [[Madrid]] ([[Spanje]]). De koers vo de elite by de mann wos 273 km lank. Winnoare wos [[Tom Boonen]].  
 
 == Koersverloop (elite) ==
-In ’t êeste dêel van de koers woarn d’r viere vôorn (Vasilev, Lopez Martin, Raison, Muravyev), moa dedie speelnde gin rolle in ’t verder verloop van de wedstryd.’t Parcours wos 273 km lank, moa ‘t wos moa in de latste 50 km da ‘t spannend kwam. 
+In ’t êeste dêel van de koers woarn d’r viere vôorn (Vasilev, Lopez Martin, Raison, Muravyev), moa dedie speelnde gin rolle in ’t verder verloop van de wedstryd. ’t Parcours wos 273 km lank, moa ‘t wos moa in de latste 50 km da ‘t spannend kwam. 
 
-De Spanjoardn rêedn vele op kop. Zyder wilnde de cours ard moakn, want nunder sprintkanon [[Oscar Freire]] dei ni mei. In de vorlatste rounde ontstoug ’t er e nieuw kopgroeptje mi twi Belgen: [[Philippe Gilbert]] en [[Stijn Devolder]]. D’anger woarn Calcagni, Lagoetin, Davis, Perdiguero, Valverde, Pereiro, Piil, Wegmann, Laverde en [[Paolo Bettini]]. Bettini attakeerde en êest koste ollêne Wegmann volgen. Gilbert, Devolder, Valverde, Perdiguero en Piil kostn doarachter ouk ansluutn. ‘t Pelotong volgde op minder of 30 secondn. 
+De Spanjoardn rêedn vele op kop. Zyder wilnde de cours ard moakn, want nunder sprintkanon [[Oscar Freire]] dei ni mei. In de vorlatste rounde ontstoug ’t er e nieuw kopgroeptje mi twi Belgen: [[Philippe Gilbert]] en [[Stijn Devolder]]. D’anger woarn Calcagni, Lagoetin, Davis, Perdiguero, Valverde, Pereiro, Piil, Wegmann, Laverde en [[Paolo Bettini]]. Bettini attakeerde en êest koste ollêne Wegmann volgen. Gilbert, Devolder, Valverde, Perdiguero en Piil kostn doarachter ouk ansluutn. ‘t Peletong volgde op minder of 30 secondn. 
 
 In de laatste ronde wos olles were t’erdoen. ’t Zagt er nar uut da ’t e massasprint gounke zyn, en ollêne Petacchi, [[Robbie McEwen]] en Boonen speelnde op dat moment nog mei. Karsten Kroon attakeerde en d’r kwam e nieuwn kopgroep mit ouk Vinokourov , Bettini en Leukemans.  Nu veranderde ’t van slag om slinger.
 
