--- a/Merkwoardig_product.mw
+++ b/Merkwoardig_product.mw
@@ -1,4 +1,4 @@
-Met e '''merkwoardig product''' wordn in [[algebra]] produuctn angeduud woa daj toch ne kêe extra na moe kyk'n. Ge keun ze makkelik erken'n mee danze vree symmetrisj utgeweirk werd'n.
+Met e '''merkwoardig product''' wordn in [[algebra]] produuctn angeduud woa daj toch ne kêe extra na moe kykn. Ge keun ze makkelik erkenn mee dan ze vree symmetrisch utgeweirk werdn.
 
 === Formules ===
 
