/* In de mythologie */

--- a/Rebbe.mw
+++ b/Rebbe.mw
@@ -4,7 +4,7 @@ De '''rebbn''' zyn [[been (anatomie)|beenders]] die tôpe de '''rebbekasse''' vo
 't Geroamte van de mens èt 24 rebbn, 12 a wezekantn.
 
 ==In de mythologie==
-De legende da [[vint]]'n e rebbe minder zoen èn dan de vrouwn is nie juste. Da's gebaseerd ip 't verhoal van Adam en Eva uut de [[Bybel]].
+De legende da [[vint]]n e rebbe minder zoen èn dan de vrouwn is nie juste. Da's gebaseerd ip 't verhoal van Adam en Eva uut de [[Bybel]].
 
 ==Culinair==
 Rebbekes van [[zwyn]]s zyn ounder andere styf populair ip [[barbecue]]s, woaby dat er mêestol [[frietn|frittn]] (ge)geetn zyn. 
