--- a/Catalonië.mw
+++ b/Catalonië.mw
@@ -2,7 +2,7 @@
 [[Ofbeeldienge: Cataluña coa.png|thumb|Woapnschild van Catalonië]]
 '''Catalonië''' ([[Cataloans]]: ''Catalunya'', [[Spoans]]: ''Cataluña'') is één van de 17 zelfstandige [[Spoansche regio]]'s met oungeveer 7 miljoen inweuners in 't noordoostn van [[Spanje]]. 't Is t'ope met 't [[Basknland]] de moteur van de Spoansche economie en 't rykste stik van 't land. Den oofdstad is [[Barcelona]].
 
-Catalonië eet e sterk identiteitsgevoel met een eign toale en een eign parlement. Sins kort een z'ook weer een eign statuut (in 't Cataloans wilt dadde eigenltik 't zelfste zeggn lik e [[groundwet]] woarin dat er gesteld wordt da Catalonië een noatie is binn Spanje. De Cataloansche bevolkienge is in 't algemeen vree jovioal en stoat oopn voe nieuw bloed. In Spanje zelve zyn de Cataloann wel gekend voe nogal up under geld te zittn.
+Catalonië eet e sterk identiteitsgevoel met een eign toale en een eign parlement. Sins kort een z'ook weer een eign statuut (in 't Cataloans wilt dadde eigenltik 't zelfste zeggn lik e [[groundwet]] woarin dat er gesteld wordt da Catalonië een noatie is binn Spanje). De Cataloansche bevolkienge is in 't algemeen vree jovioal en stoat oopn voe nieuw bloed. In Spanje zelve zyn de Cataloann wel gekend voe nogol up under geld te zittn.
 == Geschiedenisse ==
 Catalonië was een ounafhankelik land van in de vroege [[Middelêeuwen|middeleeuwn]]. 't Eeste Cataloanse parlement dateert uut 'n elfde eeuwe. De goudn tyd van de Cataloanse geschiedenisse is round de dertienste en veertienste eeuwe. In de vichtienste eeuwe aan ze zyder zelfs een consuloat in [[Brugge]].
 In [[1714]] verliest Catalonië 't geen dat er nog overgebleevn was van z'n eigen instelliengn o de keunienk Filip de zesden heel 't Iberisch schiereiland wil centraliseern no z'n eigen gedacht. De Cataloansche toale en cultuur werdn me geweld verbann deur de Spoansche bezetters. De Cataloann kreegn were e vorm va zefbesteur binst de Twidde Spoansche Republiek in de joarn [[1930]].
