--- a/Spanje.mw
+++ b/Spanje.mw
@@ -5,7 +5,7 @@ D'r weun mêer of 43 miljoen menschn. 't Is by de Europesche Unie sedert 1986. '
 Spanje is e parlementaire monarchie sedert 1975; de keunienk noemt [[Juan Carlos]]. 't Land is ounderverdêeld in 17 [[Regio (Spanje)|autonome regio's]] of autonome gemeenschappn (in 't Spoans: comunidades autónomas).
 
 == Toerisme ==
-Veel Belgen, en dus ouk West-Vloamiengn, goa geirn op vakanse na Spanje. Voerol na de Costa's an de [[Middellansche Zêe]]. Of op citytrip na Barcelona.
+Veel Belgen, en dus ouk West-Vloamiengn, goa geirn op vakanse na Spanje. De costa's an de [[Middellansche Zêe]] of e citytrip na Barcelona zyn stief in trek.
 
 ==Externe koppelienge==
 * [http://www.tourspain.be/ Dienst va toerisme]
