--- a/Bouw.mw
+++ b/Bouw.mw
@@ -1,6 +1,7 @@
-Den '''bouw''' is den economische secteur die 'em bezigoudt met 't moakn va weuniengn en andre bouwwerken. De kennisse die iervoe nodig is, en de weetnschap die 'em doamee bezigoudt, is de [[bouwkunde]].
+Den '''bouw''' is den economische secteur die 'em bezigoudt met 't zettn va weuniengn en andre bouwwerken. De kennisse die iervoe nodig is en de weetnschap die 'em doamee bezigoudt, is de [[bouwkunde]].
 
-'t Werk'n e masse verschillnde menschn in bouw, moa 'n [[metsenoare]] is wel 'n bekendstn.
+'t Werkn e masse verschillnde menschn in bouw, moa 'n [[metsenoare]] is wel 'n bekendstn.
+
 
 [[categorie:bouwkunde]]
 [[Categorie:Bouw| ]]
