--- a/Bouw.mw
+++ b/Bouw.mw
@@ -1,4 +1,4 @@
-Den '''bouw''' is den economische secteur die 'em bezigoudt met 't zettn va weuniengn en andre bouwwerken. De kennisse die iervoe nodig is en de weetnschap die 'em doamee bezigoudt, is de [[bouwkunde]].
+{{beg}}Den '''bouw''' is den economische secteur die 'em bezigoudt met 't zettn va weuniengn en andre bouwwerken. De kennisse die iervoe nodig is en de weetnschap die 'em doamee bezigoudt, is de [[bouwkunde]].
 
 't Werkn e masse verschillnde menschn in bouw, moa 'n [[metsenoare]] is wel 'n bekendstn.
 
