*Empty MediaWiki Message*

--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -1,6 +1,6 @@
 [[Ofbeeldienge:jersey rainbow.svg|100px|thumb|Boai in de kleurn van de regenboge]]
 De '''Weireldkampioenschappn Velokoerse''' zyn een collectie van [[velokoerse|velokoersn]] woarvan da de winnoars udder weireldkampioen meugn noemn. 't Zyn êendagswedstrydn die deuregoan ip 't ende van 't wielersezoen, ievers eind september, begun oktober. Ze weirdn deur de [[UCI]] georganiseerd sedert [[1927]]. Sedert 1994 bestoat er ouk e weireldkampioenschap tydrit. 
-D’r bestoat e weireldkampioen in de categoriejn van de elite, de beloften en de vrouwn. De winnoare mag een joar de zogezeide 'regenboogtrui' droagn. 
+D’r bestoat e weireldkampioen in de categoriejn van de elite, de beloften en de vrouwn. De winnoare mag een joar de zogezeide 'regenboogtrui' droagn. At e weireldkampioen ze titel verliest, meugt 'n wel bluuvn met e strieptje in de kleurn van de reegnboge bluuvn ryen.
 
 == Organisoasje en parcours ==
 Der zyn een aantal dingn die et weireldkampioenschap ounderscheidn van normoale koersn: zô es't de ênige koerse die deuregoat met nationoale teams (van 10 man). De koerse weirdt gereen ip een geslootn lokoal parcours in ne (grôte) stad. Deur de lange afstand bluuft de koerse olsan vrêe lange geslootn, en es't soms moar in de latste round(n) dat er iet gebeurt. 
