*Empty MediaWiki Message*

--- a/Môoslee.mw
+++ b/Môoslee.mw
@@ -33,7 +33,7 @@
 |datum3=01/07/2005
 |datum4=01/01/2006
 |}}
-'''Môoslee''' of '''Môorslee''' ([[Nederlands]]: ''Moorslede'') es n [[België|Belgische]] [[gemêente]] in de [[provinsje]] [[West-Vloandern]]. Môoslee èt n dêelgemêente [[Deisel]], en [[Slyps]] es wok n prochje in de gemêente. In 't hele weunn der n grôte 10 000 minsn in de gemêente.
+'''Môoslee''' of '''Môorslee''' ([[Nederlands]]: ''Moorslede'') es n [[België|Belgische]] [[gemêente]] in de [[provinsje]] [[West-Vloandern]]. Môoslee èt 'n dêelgemêente ([[Deisel]]) en [[Slyps]] es wok 'n prochje in de gemêente. In 't hele weunn der 'n grôte 10 000 minsn in de gemêente.
 
 ==Kernen==
 De gemêente Môoslee et twêe officiële dêelgemêentn [[Môoslee]] zevve en [[Deisel]]. Doabuutn ej ip 't groundgebied nog en aparte parochie, [[Slyps]].
@@ -56,14 +56,14 @@ De gemêente Môorslee ligt teegn:
 *a. [[Roeseloare]] (stad Roeseloare)
 *b. [[Rumbeke]], en 't gehucht [[Beitem]] (stad Roeseloare)
 *c. [[Legem]] (gemêente Legem)
-*d. [[Môorsele]] (gemêente Wevelgem)
+*d. [[Môorsele]] (gemêente [[Wevelgem]])
 |}
 {| align="left"
 |-
 |
-*e. [[Gilwe]] (stad Wervik)
-*f. [[Beseloare]] (gemeente Zunnebeke)
-*g. [[Passchendoale]] (gemeente Zunnebeke)
+*e. [[Gilwe]] (stad [[Wervik]])
+*f. [[Beseloare]] (gemêente [[Zunnebeke]])
+*g. [[Passchendoale]] (gemêente Zunnebeke)
 |}
 <br clear="left"/>
 ===Kaart===
@@ -86,7 +86,7 @@ Lievensmuseum: met istorische films, foto's, 'n beeldmontoage, ... es 't er 'n b
 *[http://www.lievensmuseum.org/ 't Lievensmuseum]
 
 {{GemêentnWVL}}
-[[Categorie:Môoslee| ]]
+[[Categorie:Môoslee]]
 
 [[br:Moorslede]]
 [[de:Moorslede]]
