*Empty MediaWiki Message*

--- a/Wervik.mw
+++ b/Wervik.mw
@@ -34,7 +34,7 @@
 |datum3=01/07/2005
 |datum4=01/01/2006
 |}}
-'''Wervik''' es e stee in [[West-Vloandern]]. D'r weun à peu près 17.500 inweuners. Wervik ligt langs de [[Leie]] die de grenze es mè 't [[Vrankryk|Franschke]]. A 'n overkant van de Leie ligt de Franschke gemeente [[Wervik-Zuud]] (Frans: ''Wervicq-Sud''). 
+'''Wervik''' es e stee in [[West-Vloandern]]. D'r weunn à peu près 17.500 inweuners. Wervik ligt langs de [[Leie]] die de grenze es mè 't [[Vrankryk|Franschke]]. A 'n overkant van de Leie ligt de Franschke gemeente [[Wervik-Zuud]] (Frans: ''Wervicq-Sud''). 
 
 == Geschkiedenisse ==
 [[Ofbeeldienge:Wervik JPG05.jpg|left|thumb|Wervik en de Leie</br>geziene vaneut Wervik-Zuud (F)]]
