--- a/Outulst.mw
+++ b/Outulst.mw
@@ -65,14 +65,10 @@ De gemêente Outulst grenst an tefrente dorpsjes en gemêentn:
 *c. [[Langemark]] (gemêente Langemark-Poelkapelle) met 't gehucht [[Madône|Madonna]]
 *d. [[Bikschote]] (gemêente Langemark-Poelkapelle)
 *e. [[Noordschote]] (stad Lo-Reninge)
-|}
-{| align="left"
-|-
-|
 *f. [[Reninge]] (stad Lo-Reninge)
 *g. [[Nieuwkapelle]] (stad Diksmude)
 *h. [[Woomn]] (stad Diksmude)
-*i. [[Eesn]] (stad Diksmude)
+*i. [[Êesn|Eesn]] (stad Diksmude)
 *j. [[Zarrn]] (gemeente Kortemark)
 |}
 <br clear=left>
