*Empty MediaWiki Message*

--- a/Gerrit_Major.mw
+++ b/Gerrit_Major.mw
@@ -1,4 +1,4 @@
-{{beg}}'''Gerrit Major''' ([[Brugge]], [[4 ogustus|4 augustus]] [[1980]]) is een [[West-Vloandern|Westvlamsche]] [[basket|basketter]] die ipgegroeid is in [[Ostende]]. Je speelt in [[nationale basketcompetitie 2007-2008|1e nationale]] ip de guardpositie en j’ is 1.86 m grôot. 
+'''Gerrit Major''' ([[Brugge]], [[4 ogustus|4 augustus]] [[1980]]) is een [[West-Vloandern|Westvlamsche]] [[basket|basketter]] die ipgegroeid is in [[Ostende]]. Je speelt ip de guardpositie in [[nationale basketcompetitie 2007-2008|1e nationale]] by Euphony Bree en j’ is 1.86 m grôot. 
 ==Clubs==
 *1997-2005: Telindus Oostende (D1)
 *2005-2007: Dexia Mons-Hainaut (D1)
@@ -22,6 +22,10 @@
 *2005: Semi-finalist Beker van België (Final Four)
 *2006: FIBA EuroCup
 *2007: ULEB Cup
+==Varia==
+*Gerrit Major en z'n vriendinne Julie Vandenberghe zyn in februoari 2008 voader en moeder gewordn van een dochter, Louise.
+==Externe koppelienge==
+*[http://www.breebbc.com/team/player/?p_id=77 Gerrit Major by Basketbal Bree]
 
 [[Categorie: West-Vlamsche basketter|Major Gerrit]]
 [[Categorie: Ostende|Major Gerrit]]
