--- a/Eist.mw
+++ b/Eist.mw
@@ -14,22 +14,22 @@
 |datum=31/12/2006
 |dichtheid=1742 inw.
 |postcode=8301
-|}}'''Heist''' is een dêelgemêente van [[Knokke-Heist]] an de [[kust|Vlamsche kust]] en ligt tusschn [[Zêebrugge]] en [[Knokke]]. 't Bestoat in feite uut drie badplatsen: Heist zelve, [[Duunbergen]] en een dêel van 't Albertstrange. Heist teldege in 1965, vo de fusie van gemêentn, 4.750 inweuners.
+|}}'''Heist''' (uutsproake ''Eist'') is een dêelgemêente van [[Knokke-Heist]] an de [[kust|Vlamsche kust]] en ligt tusschn [[Zêebrugge]] en [[Knokke]]. 't Bestoat in feite uut drie badplatsn: Heist zelve, [[Duunbergen]] en een dêel van 't Albertstrange. Heist teldege 4.750 inweuners vo de fusie van gemêentn in 1965.
 ==Geschiedenisse==
-De êeste noame van Heist was Koudekerke (Koudakerka in 1221, van 't Germoansche kalda=koud en kérika=kerke). De nederzettienge Koudekerke ountstound achter den [[Evendyk]], die in 't verlengde van de [[Gentele|Blanknbergsche dyk]] wierd gebouwd achter zwoare overstromiengn. In 1188 was't er al sproake van een kapelle die ofieng van de parochie [[Lissewege]]. D'oudste vermeldienge van Koudekerke als zelfstandige parochie dateert uut 1221. Round dien tyd ountstound een visschersdorp die ofhing van Koudekerke in de [[dune]]n en schorrn ten nôordn van de dyk. Êest wierd 't Noorddorp genoemd, ton Heys en loater Heyst.
+D'êeste noame van Heist was Koudekerke (Koudakerka in 1221, van 't Germoansche kalda=koud en kérika=kerke). De nederzettienge Koudekerke ountstound achter den [[Evendyk]], die in 't verlengde van de [[Gentele|Blanknbergsche dyk]] wierd gebouwd achter zwoare overstromiengn. In 1188 wast er al sproake van een kapelle die ofhieng van de parochie [[Lissewege]]. D'oudste vermeldienge van Koudekerke als zelfstandige parochie dateert uut 1221. Round dien tyd ountstound een visschersdorp die ofhieng van Koudekerke in de [[dune]]n en schorren ten nôordn van den dyk. Êest wierd 't Noorddorp genoemd, ton Heys en loater Heyst.
 
 In de negentienste êeuwe was Heist vele grotter. [[Zêebrugge]] was e dêel van Heist, juste lik Duunbergen. Zêebrugge is oungeveer ounderd joar geleen an [[Brugge]] gegeevn.
 
-De toeristische periode van Heist begost in 1860 en d'r kwam ton een êeste hotel: ''Hotel du Phare''. 't Ad een terrasse in out, want de zêedyk bestound nog nie. Dat is de reden woarom dat de beweuners van Heist tout in 't begun van de 20e êeuwe de zêedyk ''de plancher'' (planknvloer) noemdegen.
+De touristische periode van Heist begost in 1860 en d'r kwam ton een êeste hotel: ''Hotel du Phare''. D'r was een terrasse in out, want de zêedyk bestound nog nie. Dat is de reden woarom dat de beweuners van Heist tout in 't begun van de 20e êeuwe de zêedyk ''de plancher'' (planknvloer) noemdegen.
 
-Achter de [[twiddn Weireldôorloge|twidde weireldoorloge]] veranderde 't uutzicht van Heist. De spôorweg wierd verleid noa 't zuudn en in 1951 kwam 't er een nieuwe stoatie en weunwyk.
+Achter de [[twiddn Weireldôorloge|twidde weireldoorloge]] veranderde 't uutzicht van Heist. De spôorweg wierd verleid noa 't zuudn en in 1951 kwamt er een nieuwe stoatie en weunwyk.
 
-Tou in de joarn tsjeventig kwam 't zêewoater by ôog ty tou an d'n dyk. Met de werkn in Zêebrugge is ter vele zand ip 't strange van Heist gespootn gewist. Sedertdien is ter deur de werkinge van ôog en lêeg ty nog vele zand bygekommn. 't Woater komt ol lange nie mi tou an dn dyk. Heist et e vrêe brêed strange.
-Ip d'n dyk zyn sedert de joarn tsjeventig bykan al d'oude uuzn (vele [[Belle Epoque]] me bel-étage) afgebrookn en vervangn deur appartementn.
-An den dyk van Zêebrugge is ter vrêe vele zand by malkoar gewoaid. Zovele zelfs da ter e spontoane duunvormink is gekommn. 't Is sedert kort nateurreservoat.
+Tou in de joarn tsjeventig kwam 't zêewoater by ôog ty tou an d'n dyk. Met de werkn in Zêebrugge ist er vele zand ip 't strange van Heist gespootn gewist. Sedertdien ist er deur de werkienge van ôog en lêeg ty nog vele zand bygekommn. 't Woater komt ol lange nie mi tou an den dyk. Heist et e vrêe brêed strange.
+Ip d'n dyk zyn sedert de joarn tsjeventig bykan al d'oude uuzn (vele [[Belle Epoque]] me bel-étage) ofgebrookn en vervangn deur appartementn.
+An den dyk van Zêebrugge ist er vrêe vele zand by malkoar gewoaid. Zovele zelfs dat er e spontoane dunevormink is gekommn. 't Is sedert kort nateurreservoat.
 
 ==Evenementn==
-*Carnaval wordt in Heist styf gevierd. De zundag vo de vastn trekt de carnavalstoet deur de stroatn, de moandag is 't "Sprotjesdag" en wordt er gedanst ip 't "bal van de [[Zeemarminne]]" en ip vastnoavond (diesendag) wordt er nog carnaval gevierd in de stroatn van Heist en surtout in de cafés.
+*Carnaval wordt in Heist styf gevierd. De zundag vo de vast'n trekt de carnavalstoet deur de stroat'n, de moandag is 't "Sprotjesdag" en wordt er gedanst ip 't ''bal van de [[Zeemarminne]]'' en ip vast'noavond (diesendag) wordt er nog carnaval gevierd in de stroat'n van Heist en surtout in de cafés.
 *'t [[Kneistival]] in juli, een rockfestival in open lucht
 
 [[Categorie:Knokke-Heist]]
