*Empty MediaWiki Message*

--- a/Blanknberge.mw
+++ b/Blanknberge.mw
@@ -39,6 +39,7 @@
 [[Ofbeeldienge: Blankenberge - Casino 1.jpg|thumb|<center>Kruupnde baby 's van [[David Černý]] ip de Cazjeno]]
 [[Ofbeeldienge:Blankenberge Oosterstaketsel 02.jpg|thumb|<center>d'Estacade me Zeibrugge in de verte]]
 [[Ofbeeldienge:Garnaalboot B72 achterkant.jpg|thumb|<center>Gerestaureerde [[Nôordzêegernoare|gernoarbowt]] B72 (1939) in d'oude visschersoave]]
+[[Ofbeeldienge:Oud Stadhuis 1.jpg|thumb|<center>Oud staduus (1680) in Vlamsche renaissancestyl]]
 '''Blanknberge''' (officieel [[Nederlands]]: ''Blankenberge'') is een kuststadje in [[West-Vloandern]]. 't Is ein van de populairste en drukste plekkn an de [[Vlamsche Kust]]. D’r weunn meir of 18.300 menschn. Blanknberge et ein deilgemeinte: [[Uutkerke]].
 [[Ofbeeldienge:Belgium-blankenberge-beach-1900.jpg|thumb|left|<Center>Blanknberge strange 1900]]
 Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[NMBS]] zelfs speciale trings in vo de touristn.
@@ -62,13 +63,14 @@ Je ziet ze van alle kantn kommn noa ‘t strange. In ’t oogsizoen legt den [[N
 * 'n Antrekkelik [[strange]] met een lengte van 3,3 km. In de zomer kun je cabientjes, ligzetels en parasols euren. D'r zyn ook vintn die roundgoan met bakkn crème glace of met e  plateau [[Boule de Berlin|Boule de L'Yser]]s. Je kunt z' owren roepn van in de verte. Ook ip den dyk van 2 km lank valt er vanalles te beleevn.
 * De jachtoave, de vroegere visschersoave.
 * De twi estacades (staketsels) woa dat de voargeule tusschen lopt. Ze zyn vernield gewist deur de Duutschers ip 't ende van [[Twiddn Weireldoorloge|WO2]] en volledig erbouwd. 't Owsterstaketsel begun joaren 1950 in out en 't westerstaketsel begun joaren '70 in betong.
+* De [[Piere (Blanknberge)|Piere]], 'n uniek bouwwerk met een wandelbrugge in de zeie van 350 m lank. 
 * De [[Casino (Blanknberge)|Cazjeno]], cultureel centrum.
 * De [[Paravang]], een sierlik bouwsel uut de [[Belle-Epoque]]-periode.
 *[[Art Nouveau (Blanknberge)|Art Nouveau]] 
 * 't [[Monument van Lippens en De Bruyne]] ip den dyk.
 * 't [[Uzetje van Majutte]]: 't einigste visschersuzetje van Blanknberge dat bewoard gebleevn is en gerestaureerd.
+* 't Oud staduus (1680) in Vlamsche renaissancestyl, beschermd monument sedert 1937.
 * De [[Fonteintjes]], e nateurgebied in de [[dune|duunn]] tusschn Blanknberge en [[Zêebrugge|Zeibrugge]] en 't [[Zêebus|Zeibus]] in 't [[Polders|poldergebied]].
-* De [[Piere (Blanknberge)|Piere]], 'n uniek bouwwerk met een wandelbrugge in de zeie van 350 m lank. 
 ==Evenementn==
 *Carnaval wordt in Blanknberge styf gevierd. De zundag vo de vastn trekt de carnavalstoet deur de stroatn, de moandag is ’t kindercarnavalstoet en biertente ip de markt, den diesendagachternoene de Vule Jeanettestoet en ip vastnoavond carnavalambiance in de stroatn van Blanknberge en surtout in de cafés.
 *Twee daagse van Vlaanderen: wandeltocht ieder joar ‘t eiste weekend van meie en de [[Stormtocht]] in 't noajoar [http://www.2daagse.be]
