*Empty MediaWiki Message*

--- a/Brian_Lynch.mw
+++ b/Brian_Lynch.mw
@@ -2,7 +2,7 @@
 
 Lynch is 1.98 m grôot en je speelt ip de forwardpositie. 
 
-In [[2000]] kwamt’n noar [[Europa]] met een [[Itoalië|Italioans]] pasport. Sedert moarte [[2008]] et 'n de Belgische nationaliteit.
+In [[2000]] kwamt ’n noar [[Europa]] met een [[Itoalië|Italioans]] pasport. Sedert moarte [[2008]] et 'n de Belgische nationaliteit.
 
 == Ploegn ==
 * 1996-2000: Wildcats / Villanova College [[Ofbeeldienge:Flag of the United States.svg|20px]] [[USA]]
@@ -23,6 +23,13 @@ In [[2000]] kwamt’n noar [[Europa]] met een [[Itoalië|Italioans]] pasport. Se
 *2003: [[FIBA]] Europe Champions Cup
 *2004: FIBA Europe League
 *2006: [[ULEB Cup]]
+
+==Varia==
+*In juli 2007 is Brian Lynch getrouwd me tennisster Kim Clijsters.
+*In februoari 2008 is under dochter Jada geboorn.
+
+==Externe koppelienge==
+*[http://www.breebbc.com/team/player/?p_id=359 Brian Lynch by Basketbal Bree]
 
 [[Categorie: Amerikoanschn basketter|Lynch Brian]]
 
