--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -13,16 +13,16 @@ Vinokourov, Bettini, Boogerd, Moerenhout, Serrano en Stangelj goungn de latste r
 Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’n inoald deur Tom Boonen.  
 
 == Uutslag (elite) ==
-:1. '''Tom Boonen''' [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 26' 10"
-:2. '''Alejandro Valverde''' [[Ofbeeldienge:Flag of Spain.svg|20px]] z.t.
-:3. '''Anthony Geslin''' [[Ofbeeldienge:Flag of France.svg|20px]] z.t.
-:4. Marcus Ljungqvist [[Ofbeeldienge:Flag of Sweden.svg|20px]] z.t.
-:5. Murilo Fischer [[Ofbeeldienge:Flag of Brazil.svg|20px]] z.t.
-:6. Jakob Piil [[Ofbeeldienge:Flag of Denmark.svg|20px]] z.t.
-:7. Alexandre Kolobnev [[Ofbeeldienge:Flag of Russia.svg|20px]] z.t.
-:8. Andreas Klier [[Ofbeeldienge:Flag of Germany.svg|20px]] z.t.
-:9. Julian Dean [[Ofbeeldienge:Flag of New-Zealand.svg|20px]] z.t.
-:10. Martin Elmiger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
+#'''Tom Boonen''' [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 26' 10"
+#'''Alejandro Valverde''' [[Ofbeeldienge:Flag of Spain.svg|20px]] z.t.
+#'''Anthony Geslin''' [[Ofbeeldienge:Flag of France.svg|20px]] z.t.
+#Marcus Ljungqvist [[Ofbeeldienge:Flag of Sweden.svg|20px]] z.t.
+#Murilo Fischer [[Ofbeeldienge:Flag of Brazil.svg|20px]] z.t.
+#Jakob Piil [[Ofbeeldienge:Flag of Denmark.svg|20px]] z.t.
+#Alexandre Kolobnev [[Ofbeeldienge:Flag of Russia.svg|20px]] z.t.
+#Andreas Klier [[Ofbeeldienge:Flag of Germany.svg|20px]] z.t.
+#Julian Dean [[Ofbeeldienge:Flag of New Zealand.svg|20px]] z.t.
+#Martin Elmiger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
 
 == Uutslag tydrit (elite) ==
 :1. Michael Rogers 53' 34" 49 [[Ofbeeldienge:Flag of Australia.svg|20px]]
