--- a/Weireldkampioenschappn_velokoerse_1996.mw
+++ b/Weireldkampioenschappn_velokoerse_1996.mw
@@ -5,9 +5,9 @@
 In de vorlatste rounde demarreert Museeuw. Ollêne Mauro Gianetti ku nog mei. Uut 't peletong wos Andrea Tafi ontsnapt. Dat wos e ploegmoat (Mapei-GB) van Johan Museeuw, en doavan et 'n lêep gebruuk emakt. Gianetti kwam nerveus en e rêed à bloc op kop om te zorgn da Tafi ni koste noazen. In de latste rounde dei Museeuw lik of da 'n stêendôod zat. An 'n arrivée koste Museeuw, die nem maximaal espoard adde, makkelik winn van Gianetti die 't mêeste werk edoan adde. Museeuw won op zyn 31sn verjoardag. 
 
 == Uutslag (elite) ==
-#[[Johan Museeuw]] [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 23' 50"
-#Mauro Gianetti [[Ofbeeldienge:Flag of Switzerland.svg|20px]] op 1"
-#[[Michele Bartoli]] [[Ofbeeldienge:Flag of Italy.svg|20px]] op 29"
+#[['''Johan Museeuw''']] [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 23' 50"
+#'''Mauro Gianetti''' [[Ofbeeldienge:Flag of Switzerland.svg|20px]] op 1"
+#[['''Michele Bartoli''']] [[Ofbeeldienge:Flag of Italy.svg|20px]] op 29"
 #Axel Merckx [[Ofbeeldienge:Flag of Belgium.svg|20px]] z.t.
 #Richard Virenque [[Ofbeeldienge:Flag of France.svg|20px]] op 30"
 #Andrea Tafi [[Ofbeeldienge:Flag of Italy.svg|20px]] z.t. 
