*Empty MediaWiki Message*

--- a/Óscar_Freire.mw
+++ b/Óscar_Freire.mw
@@ -2,7 +2,7 @@
 
 '''Oscar Freire''' (Torrelavega, [[15 februoari]] [[1976]]) is e [[Spanje|Spaanschn]] coureur die surtout ekend is omdat 'n ol 3 keirs [[Weireldkampioenschappn velokoerse|weireldkampioen up de weug]] ewist is.
 
-Oloewel da Freire e stievn goein sprinter is, zoudt nie êerlik zyn van nem simpelweg sprinter te noemn. E moe nie vele enterneern voun in forme te groakn en met oundermêer de Broabantschn Pyl, 'n eindstand in 'n Tirreno en ze weireltitels up moelikke parcours, et 'n beweezn dat 'n oek goed omoge ku ryen.
+Oloewel da Freire e styvn goein sprinter is, zoudt nie êerlik zyn van nem simpelweg sprinter te noemn. E moe nie vele enterneern voun in forme te groakn en met oundermêer de Broabantschn Pyl, 'n eindstand in 'n Tirreno en ze weireldtitels up moelikke parcours, et 'n beweezn dat 'n ouk goed omoge ku ryen.
 
 ==Ploegn==
 *1998: Vitalicio Seguros-Grupo Generali
@@ -19,12 +19,12 @@ Oloewel da Freire e stievn goein sprinter is, zoudt nie êerlik zyn van nem simp
 
 ==Belangrykste overwinniengn==
 *3x Weireldkampioen (1999, 2001, 2004)
-*2x Milaan-San Remo (2004, 2007)
+*2x [[Milaan-San Remo]] (2004, 2007)
 *1x Hamburg (2006)
 *1x [[Gent-Wevelgem]] (2008)
 *3x Broabantschn Pyl (2004, 2005, 2006) 
 
-*3 rittn Rounde va Vrankryk
+*3 rittn [[Rounde van Vrankryk|Rounde va Vrankryk]]
 *6 rittn Rounde va Spanje
 
 [[Categorie: Coureur]]
