--- a/15_februoari.mw
+++ b/15_februoari.mw
@@ -2,6 +2,7 @@
 
 ==Geboorn==
 *[[1828]] - [[Johan Hendrik van Dale]]
+*[[1976]] - [[Oscar Freire]]
 ==Gestorvn==
 *[[1974]] - [[Cyriel Van Hauwaert]]
 *[[1992]] - [[Daniël Coens]]
