--- a/Weireldkampioenschappn_velokoerse_2005.mw
+++ b/Weireldkampioenschappn_velokoerse_2005.mw
@@ -25,9 +25,9 @@ Alejandro Valverde gounk ’n sprint an. Moar in de latste vichtig meter wos ’
 #Martin Elmiger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
 
 == Uutslag tydrit (elite) ==
-:1. Michael Rogers 53' 34" 49 [[Ofbeeldienge:Flag of Australia.svg|20px]]
-:2. José Iván Gutiérrez 53' 58" 26 [[Ofbeeldienge:Flag of Spain.svg|20px]]
-:3. [[Fabian Cancellara]] 53' 58" 38 [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
+#Michael Rogers 53' 34" 49 [[Ofbeeldienge:Flag of Australia.svg|20px]]
+#José Iván Gutiérrez 53' 58" 26 [[Ofbeeldienge:Flag of Spain.svg|20px]]
+#[[Fabian Cancellara]] 53' 58" 38 [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
 
 [[Category:Weireldkampioenschap velokoerse]]
 
