/* Palmares */  + WK 2006 (jawadde... zuk e palmares, joegns...

--- a/Benny_Vansteelant.mw
+++ b/Benny_Vansteelant.mw
@@ -18,6 +18,7 @@ In de zomer van 2002 wos Benny Vansteelant ol e ki zwoar evolln op training in F
 *[[2003]]: Europees kampioen by de elite in [[Varallo]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
 *[[2004]]: Weireldkampioen korte afstand by de elite in [[Geel (België)|Geel]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
 *[[2005]]: Weireldkampioen lange afstand by de elite in [[Barcis]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
+*[[2005]]: Weireldkampioen lange afstand by de elite in [[Frederica]] ([[Ofbeeldienge:Flag of Denmark.svg|20px]])
 *[[2007]]: Europees kampioen by de elite in [[Edingburgh]] ([[Ofbeeldienge:Flag of the United Kingdom.svg|20px]])
 
 == Erkennieng ==
