/* Palmares */ links na joartalln zyn ier ni relevant.

--- a/Benny_Vansteelant.mw
+++ b/Benny_Vansteelant.mw
@@ -6,20 +6,20 @@ Op 8 september 2007 rakte Vansteelant zwoar gekwetst bissen datn an 't trainn wo
 In de zomer van 2002 wos Benny Vansteelant ol e ki zwoar evolln op training in Font-Romeu. Gevolg: e schedel- en e sleutelbêenbreuke. E moeste ton moandnlank revalideern, moar e kwam toch were.
 
 == Palmares ==
-*[[1999]]: Weireldkampioen korte afstand by de juniors in [[Gernika]] ([[Ofbeeldienge:Flag of Spain.svg|20px]])
-*[[1999]]: Europees kampioen by de elite in [[Blumeau]] ([[Ofbeeldienge:Flag of Austria.svg|20px]])
-*[[2000]]: Weireldkampioen korte afstand by de elite in [[Calais]] ([[Ofbeeldienge:Flag of France.svg|20px]])
-*[[2000]]: Weireldkampioen lange afstand by de elite in [[Pretoria]] ([[Ofbeeldienge:Flag of South Africa.svg|20px]])
-*[[2001]]: Weireldkampioen lange afstand by de elite in [[Venray]] ([[Ofbeeldienge:Flag of the Netherlands.svg|20px]])
-*[[2001]]: Weireldkampioen korte afstand by de elite in [[Rimini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-*[[2001]]: Europees kampioen by de elite in [[Mafra]] ([[Ofbeeldienge:Flag of Portugal.svg|20px]])
-*[[2002]]: Europees kampioen by de elite in [[Zeits]] ([[Ofbeeldienge:Flag of Germany.svg|20px]])
-*[[2003]]: Weireldkampioen korte afstand by de elite in [[Affeltern]] ([[Ofbeeldienge:Flag of Switzerland.svg|20px]])
-*[[2003]]: Europees kampioen by de elite in [[Varallo]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-*[[2004]]: Weireldkampioen korte afstand by de elite in [[Geel (België)|Geel]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
-*[[2005]]: Weireldkampioen lange afstand by de elite in [[Barcis]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-*[[2005]]: Weireldkampioen lange afstand by de elite in [[Frederica]] ([[Ofbeeldienge:Flag of Denmark.svg|20px]])
-*[[2007]]: Europees kampioen by de elite in [[Edingburgh]] ([[Ofbeeldienge:Flag of the United Kingdom.svg|20px]])
+*1999: Weireldkampioen korte afstand by de juniors in [[Gernika]] ([[Ofbeeldienge:Flag of Spain.svg|20px]])
+*1999: Europees kampioen by de elite in [[Blumeau]] ([[Ofbeeldienge:Flag of Austria.svg|20px]])
+*2000: Weireldkampioen korte afstand by de elite in [[Calais]] ([[Ofbeeldienge:Flag of France.svg|20px]])
+*2000: Weireldkampioen lange afstand by de elite in [[Pretoria]] ([[Ofbeeldienge:Flag of South Africa.svg|20px]])
+*2001: Weireldkampioen lange afstand by de elite in [[Venray]] ([[Ofbeeldienge:Flag of the Netherlands.svg|20px]])
+*2001: Weireldkampioen korte afstand by de elite in [[Rimini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
+*2001: Europees kampioen by de elite in [[Mafra]] ([[Ofbeeldienge:Flag of Portugal.svg|20px]])
+*2002: Europees kampioen by de elite in [[Zeits]] ([[Ofbeeldienge:Flag of Germany.svg|20px]])
+*2003: Weireldkampioen korte afstand by de elite in [[Affeltern]] ([[Ofbeeldienge:Flag of Switzerland.svg|20px]])
+*2003: Europees kampioen by de elite in [[Varallo]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
+*2004: Weireldkampioen korte afstand by de elite in [[Geel (België)|Geel]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
+*2005: Weireldkampioen lange afstand by de elite in [[Barcis]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
+*2006: Weireldkampioen lange afstand by de elite in [[Frederica]] ([[Ofbeeldienge:Flag of Denmark.svg|20px]])
+*2007: Europees kampioen by de elite in [[Edingburgh]] ([[Ofbeeldienge:Flag of the United Kingdom.svg|20px]])
 
 == Erkennieng ==
 *2003: Vansteelant krygt 't Vlaams Sportjuweel, e trofee daj moa êne ki in je carrière ku winn.
