--- a/De_Twidde_slag_om_Mêesn.mw
+++ b/De_Twidde_slag_om_Mêesn.mw
@@ -8,7 +8,7 @@
 '''De Twidde slag om Mêesn''', ouk gekend oender de noame "De Myneslag va Mêesn", wos e crucioal gevicht in 'n [[Êeste Weireldoorloge| Êestn Weireldôorlog]] in 1914.
 
 == De vôorgeschiedenisse ==
-Tusschen [[30 oktober]] en [[3 november]] [[1914]] wos 't er ol zwoar gevochtn round [[Mêesn]] in [[De Slag van 't London Scottish Regiment]], ouk gekend ounder de noame Êeste Slag om Mêesn (dat is e bitje e bedrieglikke noame, want vele gevechtn woarn eigentlik in [[Wytschoate]]). Mêesn wos ingenoomn op 1 november 1914 deur de [[Duutsland|Duutschers]] omda 't van strategisch belang wos. A je mêester wos over Mêesn, koste je de hêle streke aan de west- en zuudkant min of mêer domineern: Mêesn legt op een euvel va 80 meters oge, en 'n omtrek is gemiddeld moa 45 meters oge. De Duutschers willnde eigentlik op 'n [[Kemmelberg]] geroakn, moa da gieng nie goed. Doarom naamn ze ouk Wytschoate in, da ogger lei.
+Tusschen [[30 oktober]] en [[3 november]] [[1914]] wos 't er ol zwoar gevochtn round [[Mêesn]] in [[De Slag van 't London Scottish Regiment]], ouk gekend ounder de noame Êeste Slag om Mêesn (dat is e bitje e bedrieglikke noame, want e masse gevechtn woarn eigentlik in [[Wytschoate]]). Mêesn wos ingenoomn op 1 november 1914 deur de [[Duutsland|Duutschers]] omda 't van strategisch belang wos. A je mêester wos over Mêesn, koste je de hêle streke aan de west- en zuudkant min of mêer domineern: Mêesn legt op een euvel va 80 meters oge, en 'n omtrek is gemiddeld moa 45 meters oge. De Duutschers willnde eigentlik op 'n [[Kemmelberg]] geroakn, moa da gieng nie goed. Doarom naamn ze ouk Wytschoate in, da ogger lei.
 
 == 19 mynn ontploffn ==
 De Twidde Slag om Mêesn viel op [[7 juni]] [[1917]]. De Britsche troepn, ounder leidieng va Generaal Plumer, addn bykan 1,5 joar gegroaven an tunnels om tout ounder de stelliengn van 'n Duuts te geroaken. De tunnels liepn va [[Hill 60]] in 't nôordn tout in [[Ploegsteirt]] in 't zuudn.
