--- a/Koksyde.mw
+++ b/Koksyde.mw
@@ -89,6 +89,8 @@ Koksijde grenst an deze volgende dorpn en gemeentn:
 
 ==Externe koppelienge==
 *[http://www.koksijde.be Website van de gemeente]
+*[http://www.koksyde.be  d'andere website van de gemeente of oak van 't baaltje, ook te vind'n via:]
+*[http://www.baaldje.be]
 
 {{Gemêent'nWVL}}
 [[Categorie:Koksyde]]
