/* Externe koppelienge */ twee keer dezelfde site onder dezelfste noame moet niet

--- a/Koksyde.mw
+++ b/Koksyde.mw
@@ -89,8 +89,7 @@ Koksijde grenst an deze volgende dorpn en gemeentn:
 
 ==Externe koppelienge==
 *[http://www.koksijde.be Website van de gemeente]
-*[http://www.koksyde.be   www.koksyde.be: d'andere website van de gemeente of oak van 't baaltje, ook te vind'n via:]
-*[http://www.baaldje.be wwww.baaldje.be]
+*[http://www.koksyde.be D'andere website van de gemeente en van 't baaldje]
 
 {{Gemêent'nWVL}}
 [[Categorie:Koksyde]]
