*Empty MediaWiki Message*

--- a/Baaldje.mw
+++ b/Baaldje.mw
@@ -2,7 +2,7 @@
 
 '''Baaldje''', de lokale naam voor Sint-Idesbald, is êen van de 3 prochies van [[Koksyde]]. De andere twêe zyn 't Dorp en de Bings.
 ==Externe koppelienge==
-*[http://www.koksyde.be Website van 't Baaldje]
+*[http://www.baaldje.be Website van 't Baaldje]
 
 [[Categorie:Plekke in West-Vloandern]]
 [[Categorie:Koksyde]]
