--- a/Wulpn.mw
+++ b/Wulpn.mw
@@ -16,18 +16,18 @@
 |postcode=8670
 |netn=
 |}}
-'''Wulpn''' (officieel [[Nederlands]]: ''Wulpen'') is een dêelgemêente van de [[België|Belgische]] kustgemêente [[Koksyde]] in de provincie [[West-Vloandern]]. Wulpn ligt langst d’ oude spoorwegberm [[Nieuwpôort]]-[[Diksmude]] die een rol speelde by de [[Slag an den Yzer]] binst den [[Êestn Weireldoorloge]]. Vlak by de grenze met [[Ramskapelle]] zyn der nog restantn van een observoatiepost.
+'''Wulpn''' (officieel [[Nederlands]]: ''Wulpen'') is een dêelgemêente van de [[België|Belgische]] kustgemêente [[Koksyde]] in de provincie [[West-Vloandern]]. Wulpn ligt langst d’oude spoorwegberm [[Nieuwpôort]]-[[Diksmude]] die een rolle speelde by de [[Slag an den Yzer]] binst den [[Êestn Weireldoorloge]]. Vlak by de grenze met [[Ramskapelle]] zyn der nog restantn van een observoatiepost.
 
 ==Beziensweirdigeedn==
-*[[Sint Willibrorduskerke]]: Wulpn is  êen van d’ oudste parochies van de Westhoek. In de 13de êeuw was ’t er een vroeggotische kerke, woavan dat de torre nu nog  bewoard is. In 1873 is de kerke deur brand verwoest, moa twi joar loater startte de bouw van een nieuwe neogotische kerke. In 1892 is d’ oude torre gerestaureerd en in 1914 deur de genietroepn van ‘t Belgisch leger were beschoadigd. Achter den êestn weireldereldoorloge is de kerke ersteld. Sedert 1939 is de torre beschermd en eigendom van de gemêente.
+*[[Sint Willibrorduskerke]]: Wulpn is  êen van d’oudste parochies van de Westhoek. In de 13ste êeuwe wast er een vroeggotische kerke, woavan dat de torre nu nog bewoard is. In 1873 is de kerke deur brand verwoest, moa twi joar loater startte de bouw van een nieuwe neogotische kerke. In 1892 is d’oude torre gerestaureerd en in 1914 deur de genietroepn van ‘t Belgisch leger were beschoadigd. Achter den êestn weireldoorloge is de kerke ersteld. Sedert 1939 is de torre beschermd en eigendom van de gemêente.
 *Sint-Willibrorduskapelle en 't pitje.
-*Oorlogsmonument: Nog binst den êeste weireldoorloge begostn z’ al an de bouw. Ip 11 juli 1920 is ‘t monument ingehuldigd deur keunienk Albert I. In 1997-98 is ‘t hêlegans gerenoveerd deur de Regie der Gebouwen, West-Vloandern. De gemêente Koksyde zorgt nu vo ‘t ounderhoud en de  beplantienge. 
+*Oorlogsmonument: Nog binst den êestn weireldoorloge begostn z’al an de bouw. Ip 11 juli 1920 is ‘t monument ingehuldigd deur keunienk Albert I. In 1997-98 is ‘t hêlegans gerenoveerd deur de Regie der Gebouwen, West-Vloandern. De gemêente Koksyde zorgt nu vo ‘t ounderhoud en de  beplantienge. 
 *Anlegsteiger vo bôotn: Wulpn ligt langs ‘t [[kanoal Duunkerke-Nieuwpôort]]. In 1998 et de gemêente in soamnwerkienge met de provincie een aanlegsteiger gebouwd vo bôotn.
 
 ==Fêestn en Folklore==
 *Landelikke fêeste, ieder joar, de derde zoaterdag van juli 
 *Humoristisch theoaterfestival
-*[[Sint-Willibrordus]]verêrienge: bedevoart ieder joar ip [[Sienkschn|sienkschnmoandag]], den oogdag van Wulpn. Volgns de [[legende]] zou Sint-Willibrord an ’t end van de 7e êeuwe ip zyn reize van Grevelingn noa Friesland een ende in Wulpn verbleevn en. In ’t dorp bestoat nog alsan ’t Sint-Willibrorduspitje met de kapelle d’rneffest. ’t Pitje wordt ieder joar ip sienkschnmoandag gewyd deur de platselikke paster. De pelgrims scheppn ton woater uut ’t pitje vo te drienkn te geevn an ziekn en jounges me kienkhoest of convulsies. Ip een bedevoartsvendeltje uut 1657 stoat de tekst:
+*[[Sint-Willibrordus]]verêrienge: bedevoart ieder joar ip [[Sienkschn|sienkschnmoandag]], den oogdag van Wulpn. Volgns de [[legende]] zou Sint-Willibrord an ’t end van de 7e êeuwe ip zyn reize van Grevelingn noa Friesland een ende in Wulpn verbleevn en. In ’t dorp bestoat nog alsan ’t Sint-Willibrorduspitje met de kapelle d’r neffest. ’t Pitje wordt ieder joar ip sienkschnmoandag gewyd deur de platselikke paster. De pelgrims scheppn ton woater uut ’t pitje vo te drienkn te geevn an ziekn en jounges me kienkhoest of convulsies. Ip een bedevoartsvendeltje uut 1657 stoat de tekst:
 ::Willibrordus, vriendt des heeren,
 ::Wilt van uwe dienaers keeren,
 ::Vaeder van ons neder landt,
