*Empty MediaWiki Message*

--- a/Baaldje.mw
+++ b/Baaldje.mw
@@ -1,6 +1,6 @@
 {{beg}}
 
-'''Baaldje''', de lokale naam voor Sint-Idesbald, is êen van de 3 prochies van [[Koksyde]]. De andere twêe zyn 't Dorp en de Bings.
+'''Baaldje''', de lokale naam voor Sint-Idesbald, is êen van de 3 prochies van [[Koksyde]]. De andere twêe zyn 't Dorp en de Bings (van 't Frans ''Bains'': Koksyde-bad).
 ==Externe koppelienge==
 *[http://www.baaldje.be Website van 't Baaldje]
 
