veranderienge 92006 van [[Special:Contributions/193.49.96.14|193.49.96.14]] were weggedoan

--- a/God.mw
+++ b/God.mw
@@ -1,3 +1,4 @@
+[[Ofbeeldienge:Creation of the Sun and Moon face detail.jpg|thumb|Right|<center>Klassiek Godsbild in de Sixtynse kapelle - "Scheppienge van de zunne en de moane" deur Michelangelo]]
  
 '''God''' is in 't [[Christndom]] de noame van 't oofdpersonage ut de [[Bybel]]. En stoat oek bekend lik de Schepper, den Olmachtige, of Êre.
 
