Oscarito in de Vloanders

--- a/Óscar_Freire.mw
+++ b/Óscar_Freire.mw
@@ -4,6 +4,8 @@
 
 Oloewel da Freire e styvn goein sprinter is, zoudt nie êerlik zyn van nem simpelweg sprinter te noemn. E moe nie vele enterneern voun in forme te groakn en met oundermêer de Broabantschn Pyl, 'n eindstand in 'n Tirreno en ze weireldtitels up moelikke parcours, et 'n beweezn dat 'n ouk goed omoge ku ryen.
 
+Ie zegt van zyn eign dat zyn parcourskennis in de Vloanders niet dadde is, en dat 'n vele peist by zyn eign: "''Ippassn Oscar, 't es doar noa reks''" - en dat iederêen ton noa links ipdroait.
+
 ==Ploegn==
 *1998: Vitalicio Seguros-Grupo Generali
 *1999: Vitalicio Seguros-Grupo Generali
