--- a/Koksyde.mw
+++ b/Koksyde.mw
@@ -85,7 +85,7 @@ Koksijde grenst an deze volgende dorpn en gemeentn:
 * [[Elise Crombez]]: topmodel
 
 ==Trivioal== 
-* De klemtone van de noame Koksyde legt op d'êerste lettergrepe. Vroag et moa an wien datter wunt. 
+* De klemtone van de noame Koksyde legt op d'êerste lettergrepe. Vroag et moa an wien dat er wunt.
 
 ==Externe koppelienge==
 *[http://www.koksijde.be Website van de gemeente]
