*Empty MediaWiki Message*

--- a/Piet_De_Praitere.mw
+++ b/Piet_De_Praitere.mw
@@ -2,4 +2,7 @@
 
 Oafweg de joarn 90 kwam De Praitere bekend mè Studio Kafka, e radioprogramma op [[Studio Brussel]], mè [[Kamagurka]]. Een bekend typeken van 'em is "''Etienne met het open verhemelte''" uut [[Vormezêle]].
 
+=Externe koppelienge==
+*[http://www.youtube.com/watch?v=7lRzSWRjQFI&feature=related Piet De Praitere met ''Etienne met het open verhemelte''.]
+
 [[Categorie:Kluchtigoard|De Praitere, Piet]]
