*Empty MediaWiki Message*

--- a/Westkapelle.mw
+++ b/Westkapelle.mw
@@ -2,5 +2,6 @@
 
 * [[Westkapelle (West-Vloandern)]]: e gemeente an de [[West-Vloandern|West-Vlamsche]] kust
 * [[West-Kapel]]: e gemeente in de [[Frans-Vloandern|Frans-Vlamsche]] Westoek
+* [[Westkapelle (Olland)|Westkapelle]]: e stad in [[Zêeland]]
 
 {{db}}
