--- a/Westkapelle.mw
+++ b/Westkapelle.mw
@@ -1,7 +1,7 @@
 {{dbintro}}
 
 * [[Westkapelle (West-Vloandern)]]: e gemeente an de [[West-Vloandern|West-Vlamsche]] kust
-* [[West-Kapel]]: e gemeente in de [[Frans-Vloandern|Frans-Vlamsche]] Westoek
+* [[West-Kappel]]: e gemeente in de [[Frans-Vloandern|Frans-Vlamsche]] Westoek
 * [[Westkapelle (Olland)|Westkapelle]]: e stad in [[Zêeland]]
 
 {{db}}
