*Empty MediaWiki Message*

--- a/Plakwoaier.mw
+++ b/Plakwoaier.mw
@@ -5,6 +5,10 @@ Vô me ne plakwoaier te speeln ei je wind nôdig en surtoe 'n grôte open plekke
 <p>'t Skint dat ze 't word ''plakwaaier'' alljeine in [[Kortryk]] kenn en byvôorbild nie in [[Brugge]], doa zeggn ze ''vlieger''. An de kust klappen ze van 'n ''droake''. <p>
 ''Plakwoaier'' es wok e skelwor in de coté van Kortryk, en da wil zeggn ''onnôzeleire'' of ''pierewoai'', of jien die noa de wind droait lik ne windmeuln.
 
+== Website == 
+*[http://www.lecerfvolant.info LeCerfVolant.info (fr)]
+
+
 [[Categorie:Obbie]]
 
 [[an:Milorcha]]
