*Empty MediaWiki Message*

--- a/Plakwoaier.mw
+++ b/Plakwoaier.mw
@@ -1,9 +1,9 @@
 [[Ofbeeldienge:Kite flying.jpg|thumb|Plakwaaier]]
 {{plat|Kortryks}}
 Ne '''plakwaaier''' of '''plakwoaier''' es e sorte van speelgoed da j'dikkens wel e kjei kunt ziene an de zjei. Je bestoat eut ne vliegr gemoakt van 'n licht geroamte met nen doek vô de wind te vangn. J'eit ôok ne steirt die zorgt vô de stabiliteit. De plakwoaier es verbonden met den bestuurder met jin of twjee kôorden van 10 to 200 meitrs lank. De luxemodellen met twjee kôorden kundje besturen, byvôorbeeld om te deuken of over de koppen te skeiren van de badgasten. <p>
-Vô me ne plakwoaier te speeln ei je wind nôdig en surtoe 'n grôte open plekke zondr electrikedroaden. Lik da die plekkn lankstom moeilikker te vindn zyn komdje dikkens van oarmoe an de zjei eut.
-<p>'t Skint dat ze 't word ''plakwaaier'' alljeine in [[Kortryk]] kenn en byvôorbild nie in [[Brugge]], doa zeggn ze ''vlieger''. An de kust klappen ze van 'n ''droake''. <p>
-''Plakwoaier'' es wok e skelwor in de coté van Kortryk, en da wil zeggn ''onnôzeleire'' of ''pierewoai'', of jien die noa de wind droait lik ne windmeuln.
+Vô me ne plakwoaier te speeln ei je wind nôdig en surtout 'n grôte open plekke zondr electrikedroaden. Lik da die plekkn lankstom moeilikker te vindn zyn komdje dikkens van oarmoe an de zjei eut.
+<p>'t Skynt dat ze 't word ''plakwaaier'' alljeine in [[Kortryk]] kenn en byvôorbild nie in [[Brugge]], doa zeggn ze ''vlieger''. An de kust klappen ze van 'n ''droake''. <p>
+''Plakwoaier'' es wok e skelwor in de coté van Kortryk en da wil zeggn ''onnôzeleire'' of ''pierewoai'', of jien die noa de wind droait lik ne windmeuln.
 
 == Website == 
 *[http://www.lecerfvolant.info LeCerfVolant.info (fr)]
