--- a/Weireldkampioenschappn_velokoerse.mw
+++ b/Weireldkampioenschappn_velokoerse.mw
@@ -16,17 +16,17 @@ In [[2007]] gingn de weireldkampioenschappn deure in [[Stuttgart]], van 26 to 30
 * Wegrit elite: [[Paolo Bettini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
 
 ==Weireldkampioenn elite vintn van de voorbye joarn==
-*[[2006]] in Salzburg: [[Paolo Bettini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (2005)|2005]] in Madrid: [[Tom Boonen]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (2004)|2004]] in [[Verona]]: [[Oscar Freire]]  ([[Ofbeeldienge:Flag of Spain.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (2003)|2003]] in Hamilton: [[Igor Astarloa]] ([[Ofbeeldienge:Flag of Spain.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (2002)|2002]] in [[Zolder]]: [[Mario Cipollini]] ([[Ofbeeldienge:Flag of Italy.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (2001)|2001]] in Lissabon: Oscar Freire ([[Ofbeeldienge:Flag of Spain.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (2000)|2000]] in Plouay: [[Romans Vainsteins]] ([[Ofbeeldienge:Flag of Latvia.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (1999)|1999]] in Verona: Oscar Freire ([[Ofbeeldienge:Flag of Spain.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (1998)|1998]] in Valkenburg: [[Oscar Camenzind]] ([[Ofbeeldienge:Flag of Switzerland.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (1997)|1997]] in San Sebastian: [[Laurent Brochard]] ([[Ofbeeldienge:Flag of France.svg|20px]])
-*[[Weireldkampioenschappn velokoerse (1996)|1996]] in Lugano: [[Johan Museeuw]] ([[Ofbeeldienge:Flag of Belgium.svg|20px]])
+*[[2006]] in Salzburg: [[Paolo Bettini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (2005)|2005]] in Madrid: [[Tom Boonen]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (2004)|2004]] in [[Verona]]: [[Oscar Freire]]  [[Ofbeeldienge:Flag of Spain.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (2003)|2003]] in Hamilton: [[Igor Astarloa]] [[Ofbeeldienge:Flag of Spain.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (2002)|2002]] in [[Zolder]]: [[Mario Cipollini]] [[Ofbeeldienge:Flag of Italy.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (2001)|2001]] in Lissabon: Oscar Freire [[Ofbeeldienge:Flag of Spain.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (2000)|2000]] in Plouay: [[Romans Vainsteins]] [[Ofbeeldienge:Flag of Latvia.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (1999)|1999]] in Verona: Oscar Freire [[Ofbeeldienge:Flag of Spain.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (1998)|1998]] in Valkenburg: [[Oscar Camenzind]] [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (1997)|1997]] in San Sebastian: [[Laurent Brochard]] [[Ofbeeldienge:Flag of France.svg|20px]]
+*[[Weireldkampioenschappn velokoerse (1996)|1996]] in Lugano: [[Johan Museeuw]] [[Ofbeeldienge:Flag of Belgium.svg|20px]]
 
 ==Belgn en West-Vloamiengn==
 [[Ofbeeldienge:Tomboonen antwerpen.JPG|thumb|[[Tom Boonen]] als weireldkampioen (2006)]]
