+ andere winnoars en winnoaressen

--- a/Weireldkampioenschappn_velokoerse_1996.mw
+++ b/Weireldkampioenschappn_velokoerse_1996.mw
@@ -4,7 +4,7 @@
 't Parcours wos zwoar en surtout van passe voor e klemmer. Achter 120 km is 't er e grôotn groep ontsnapt. Museeuw is  mei, t'ope met ounder anger 3 Zwitschers die nunder hêlegans geevn vor eigen publiek. Museeuw is vorzichtig mi zyn krachtn: iddern klem begunt an 'n kop en e lat nem in de beklemmieng uutzakkn tout an 'n steirt van 'n groep.
 In de vorlatste rounde demarreert Museeuw. Ollêne Mauro Gianetti ku nog mei. Uut 't peletong wos Andrea Tafi ontsnapt. Dat wos e ploegmoat (Mapei-GB) van Johan Museeuw, en doavan et 'n lêep gebruuk emakt. Gianetti kwam nerveus en e rêed à bloc op kop om te zorgn da Tafi ni koste noazen. In de latste rounde dei Museeuw lik of da 'n stêendôod zat. An 'n arrivée koste Museeuw, die nem maximaal espoard adde, makkelik winn van Gianetti die 't mêeste werk edoan adde. Museeuw won op zyn 31sn verjoardag. 
 
-== Uutslag (elite) ==
+== Uutslag wegrit ventn (elite) ==
 #'''[[Johan Museeuw]]''' [[Ofbeeldienge:Flag of Belgium.svg|20px]] in 6u 23' 50"
 #'''Mauro Gianetti''' [[Ofbeeldienge:Flag of Switzerland.svg|20px]] op 1"
 #'''[[Michele Bartoli]]''' [[Ofbeeldienge:Flag of Italy.svg|20px]] op 29"
@@ -15,6 +15,14 @@ In de vorlatste rounde demarreert Museeuw. Ollêne Mauro Gianetti ku nog mei. Uu
 #Davide Rebellin [[Ofbeeldienge:Flag of Italy.svg|20px]] z.t.
 #Tony Rominger [[Ofbeeldienge:Flag of Switzerland.svg|20px]] z.t.
 #Bjarne Riis [[Ofbeeldienge:Flag of Denmark.svg|20px]] z.t.
+
+== Andere winnoars ==
+* Wegrit ventn (beloftn): Giuliano Figueras [[Ofbeeldienge:Flag of Italy.svg|20px]]
+* Wegrit vrouwn: Barbara Heeb [[Ofbeeldienge:Flag of Switzerland.svg|20px]]
+* Tydrit ventn (elite):  Alex Zülle [[Ofbeeldienge:Flag of Switzerland.svg|20px]] 
+* Tydrit ventn (beloftn): Luca Sironi [[Ofbeeldienge:Flag of Italy.svg|20px]]
+* Tydrit vrouwn:  Jeannie Longo [[Ofbeeldienge:Flag of France.svg|20px]] 
+
 
 [[Category:Weireldkampioenschap velokoerse]]
 
