*Empty MediaWiki Message*

--- a/12_februoari.mw
+++ b/12_februoari.mw
@@ -3,6 +3,7 @@
 ==Geboorn==
 *[[1938]] - [[Maurits Sabbe]]
 ==Gestorvn==
+*[[1976]] - [[Paul Boudry]]
 *[[1978]] - [[Cecilia Callebert]]
 
 [[Categorie:Datum]]
