*Empty MediaWiki Message*

--- a/1976.mw
+++ b/1976.mw
@@ -12,6 +12,10 @@
 ;november
 * [[19 november|19]] - [[Benny Vansteelant]]
 
+==Gestorvn==
+;februoari
+*[[12 februoari|12]] - [[Paul Boudry]]
+
 [[Categorie: 1970-1979]]
 
 [[af:1976]]
