--- a/Hans_Peter_Janssens.mw
+++ b/Hans_Peter_Janssens.mw
@@ -20,3 +20,5 @@ Van 2006 tout juli 2008 speelt ’n de rolle van de slechtn, ''Javert'' van  Les
 [[Categorie:West-Vlamsche zanger|Janssens, Peter]]
 [[Categorie:West-Vlamschen acteur|Janssens, Peter]]
 [[Categorie:Musical|Janssens, Peter]]
+
+*[http://www.fanclubhpj.be/ Fansite]
